--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-permalink: /:categories/:title/
-url: "http://example.com"
-full_name: "Saigon Jekyll Theme"
-first_name: "Just"
-last_name: "Me"
-blog_title: "Title"
+permalink: /:categories/:year/:month/:day/:title/
+url: "http://ckilimci.github.io"
+full_name: "Caglar Kilimci"
+first_name: "c"
+last_name: "k"
+blog_title: "Better to write down.."
 author_img_name_path: "/images/users/user.jpg"
-disqus_shortname: "example"
+disqus_shortname: "blog"
 copyright_year: "2016"
 google_analytics_code: ""
-aboutme: "I like ramen noodles with cream."
+aboutme: "I like to move it, move it."
