--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 permalink: /:categories/:year/:month/:day/:title/
 url: "http://ckilimci.github.io"
 full_name: "Caglar Kilimci"
-first_name: "c"
-last_name: "k"
+first_name: "Better to"
+last_name: "write down.."
 blog_title: "Better to write down.."
 author_img_name_path: "/images/users/user.jpg"
 disqus_shortname: "blog"
