Google analytics code

--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,5 @@ blog_title: "Better to write down.."
 author_img_name_path: "/images/users/user.jpg"
 disqus_shortname: "blog"
 copyright_year: "2016"
-google_analytics_code: ""
+google_analytics_code: "UA-6120982-3"
 aboutme: "I like to move it, move it."
