--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ disqus_shortname: "blog"
 copyright_year: "2016"
 google_analytics_code: "UA-6120982-3"
 aboutme: "I like to move it, move it."
-markdown: redcarpet
+markdown: kramdown
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "strikethrough", "superscript", "with_toc_data"]
 
